IAMEN/XPS-Q8/XPS-Q-Drivers/XPS-Q_Drivers/XPS-Q_DLL_Drivers/XPS_Q8_drivers.h

DLL int __stdcall GPIOAnalogGet (int SocketIndex, int NbElements, char * GPIONameList, double AnalogValue[]);  /* Read analog input or analog output for one or few input */
DLL int __stdcall GPIOAnalogSet (int SocketIndex, int NbElements, char * GPIONameList, double AnalogOutputValue[]);  /* Set analog output for one or few output */
DLL int __stdcall GPIOAnalogGainGet (int SocketIndex, int NbElements, char * GPIONameList, int AnalogInputGainValue[]);  /* Read analog input gain (1, 2, 4 or 8) for one or few input */
DLL int __stdcall GPIOAnalogGainSet (int SocketIndex, int NbElements, char * GPIONameList, int AnalogInputGainValue[]);  /* Set analog input gain (1, 2, 4 or 8) for one or few input */
DLL int __stdcall GPIODigitalGet (int SocketIndex, char * GPIOName, unsigned short * DigitalValue);  /* Read digital output or digital input  */
DLL int __stdcall GPIODigitalSet (int SocketIndex, char * GPIOName, unsigned short Mask, unsigned short DigitalOutputValue);  /* Set Digital Output for one or few output TTL */
DLL int __stdcall GroupAccelerationSetpointGet (int SocketIndex, char * GroupName, int NbElements, double SetpointAcceleration[]);  /* Return setpoint accelerations */
DLL int __stdcall GroupAnalogTrackingModeEnable (int SocketIndex, char * GroupName, char * Type);  /* Enable Analog Tracking mode on selected group */
DLL int __stdcall GroupAnalogTrackingModeDisable (int SocketIndex, char * GroupName);  /* Disable Analog Tracking mode on selected group */
DLL int __stdcall GroupCorrectorOutputGet (int SocketIndex, char * GroupName, int NbElements, double CorrectorOutput[]);  /* Return corrector outputs */
DLL int __stdcall GroupCurrentFollowingErrorGet (int SocketIndex, char * GroupName, int NbElements, double CurrentFollowingError[]);  /* Return current following errors */
DLL int __stdcall GroupHomeSearch (int SocketIndex, char * GroupName);  /* Start home search sequence */
DLL int __stdcall GroupHomeSearchAndRelativeMove (int SocketIndex, char * GroupName, int NbElements, double TargetDisplacement[]);  /* Start home search sequence and execute a displacement */
DLL int __stdcall GroupInitialize (int SocketIndex, char * GroupName);  /* Start the initialization */
DLL int __stdcall GroupInitializeNoEncoderReset (int SocketIndex, char * GroupName);  /* Start the initialization with no encoder reset */
DLL int __stdcall GroupInitializeWithEncoderCalibration (int SocketIndex, char * GroupName);  /* Start the initialization with encoder calibration */
DLL int __stdcall GroupInterlockDisable (int SocketIndex, char * GroupName);  /* Set group interlock disable */
DLL int __stdcall GroupInterlockEnable (int SocketIndex, char * GroupName);  /* Set group interlock enable */
DLL int __stdcall GroupJogParametersSet (int SocketIndex, char * GroupName, int NbElements, double Velocity[], double Acceleration[]);  /* Modify Jog parameters on selected group and activate the continuous move */
DLL int __stdcall GroupJogParametersGet (int SocketIndex, char * GroupName, int NbElements, double Velocity[], double Acceleration[]);  /* Get Jog parameters on selected group */
DLL int __stdcall GroupJogCurrentGet (int SocketIndex, char * GroupName, int NbElements, double Velocity[], double Acceleration[]);  /* Get Jog current on selected group */
DLL int __stdcall GroupJogModeEnable (int SocketIndex, char * GroupName);  /* Enable Jog mode on selected group */
DLL int __stdcall GroupJogModeDisable (int SocketIndex, char * GroupName);  /* Disable Jog mode on selected group */
DLL int __stdcall GroupKill (int SocketIndex, char * GroupName);  /* Kill the group */
DLL int __stdcall GroupMotionDisable (int SocketIndex, char * GroupName);  /* Set Motion disable on selected group */
DLL int __stdcall GroupMotionEnable (int SocketIndex, char * GroupName);  /* Set Motion enable on selected group */
DLL int __stdcall GroupMotionStatusGet (int SocketIndex, char * GroupName, int NbElements, int Status[]);  /* Return group or positioner status */
DLL int __stdcall GroupMoveAbort (int SocketIndex, char * GroupName);  /* Abort a move */
DLL int __stdcall GroupMoveAbortFast (int SocketIndex, char * GroupName, int AccelerationMultiplier);  /* Abort quickly a move */
DLL int __stdcall GroupMoveAbsolute (int SocketIndex, char * GroupName, int NbElements, double TargetPosition[]);  /* Do an absolute move */
DLL int __stdcall GroupMoveRelative (int SocketIndex, char * GroupName, int NbElements, double TargetDisplacement[]);  /* Do a relative move */
DLL int __stdcall GroupPositionCorrectedProfilerGet (int SocketIndex, char * GroupName, double PositionX, double PositionY, double * CorrectedProfilerPositionX, double * CorrectedProfilerPositionY);  /* Return corrected profiler positions */
DLL int __stdcall GroupPositionCurrentGet (int SocketIndex, char * GroupName, int NbElements, double CurrentEncoderPosition[]);  /* Return current positions */
DLL int __stdcall GroupPositionPCORawEncoderGet (int SocketIndex, char * GroupName, double PositionX, double PositionY, double * PCORawPositionX, double * PCORawPositionY);  /* Return PCO raw encoder positions */
DLL int __stdcall GroupPositionSetpointGet (int SocketIndex, char * GroupName, int NbElements, double SetPointPosition[]);  /* Return setpoint positions */
DLL int __stdcall GroupPositionTargetGet (int SocketIndex, char * GroupName, int NbElements, double TargetPosition[]);  /* Return target positions */
DLL int __stdcall GroupReferencingActionExecute (int SocketIndex, char * PositionerName, char * ReferencingAction, char * ReferencingSensor, double ReferencingParameter);  /* Execute an action in referencing mode */
DLL int __stdcall GroupReferencingStart (int SocketIndex, char * GroupName);  /* Enter referencing mode */
DLL int __stdcall GroupReferencingStop (int SocketIndex, char * GroupName);  /* Exit referencing mode */
DLL int __stdcall GroupStatusGet (int SocketIndex, char * GroupName, int * Status);  /* Return group status */
DLL int __stdcall GroupStatusStringGet (int SocketIndex, int GroupStatusCode, char * GroupStatusString);  /* Return the group status string corresponding to the group status code */
DLL int __stdcall GroupVelocityCurrentGet (int SocketIndex, char * GroupName, int NbElements, double CurrentVelocity[]);  /* Return current velocities */
DLL int __stdcall KillAll (int SocketIndex);  /* Put all groups in 'Not initialized' state */
DLL int __stdcall RestartApplication (int SocketIndex);  /* Restart the Controller */
DLL int __stdcall PositionerAnalogTrackingPositionParametersGet (int SocketIndex, char * PositionerName, char * GPIOName, double * Offset, double * Scale, double * Velocity, double * Acceleration);  /* Read dynamic parameters for one axe of a group for a future analog tracking position */
DLL int __stdcall PositionerAnalogTrackingPositionParametersSet (int SocketIndex, char * PositionerName, char * GPIOName, double Offset, double Scale, double Velocity, double Acceleration);  /* Update dynamic parameters for one axe of a group for a future analog tracking position */
DLL int __stdcall PositionerAnalogTrackingVelocityParametersGet (int SocketIndex, char * PositionerName, char * GPIOName, double * Offset, double * Scale, double * DeadBandThreshold, int * Order, double * Velocity, double * Acceleration);  /* Read dynamic parameters for one axe of a group for a future analog tracking velocity */
DLL int __stdcall PositionerAnalogTrackingVelocityParametersSet (int SocketIndex, char * PositionerName, char * GPIOName, double Offset, double Scale, double DeadBandThreshold, int Order, double Velocity, double Acceleration);  /* Update dynamic parameters for one axe of a group for a future analog tracking velocity */
DLL int __stdcall PositionerBacklashGet (int SocketIndex, char * PositionerName, double * BacklashValue, char * BacklaskStatus);  /* Read backlash value and status */
DLL int __stdcall PositionerBacklashSet (int SocketIndex, char * PositionerName, double BacklashValue);  /* Set backlash value */
DLL int __stdcall PositionerBacklashEnable (int SocketIndex, char * PositionerName);  /* Enable the backlash */
DLL int __stdcall PositionerBacklashDisable (int SocketIndex, char * PositionerName);  /* Disable the backlash */
DLL int __stdcall PositionerCompensatedPCOAbort (int SocketIndex, char * PositionerName);  /* Abort CIE08 compensated PCO mode */
DLL int __stdcall PositionerCompensatedPCOCurrentStatusGet (int SocketIndex, char * PositionerName, int * Status);  /* Get current status of CIE08 compensated PCO mode */
DLL int __stdcall PositionerCompensatedPCOEnable (int SocketIndex, char * PositionerName);  /* Enable CIE08 compensated PCO mode execution */
DLL int __stdcall PositionerCompensatedPCOFromFile (int SocketIndex, char * PositionerName, char * DataFileName);  /* Load file to CIE08 compensated PCO data buffer */