IAMEN/XPS-Q8/XPS-Q-Drivers/XPS-Q_Drivers/XPS-Q_DLL_Drivers/XPS_Q8_drivers.bas

Declare Function GPIOAnalogGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogValue As Double) As Long '  Read analog input or analog output for one or few input
Declare Function GPIOAnalogSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogOutputValue As Double) As Long '  Set analog output for one or few output
Declare Function GPIOAnalogGainGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogInputGainValue As Long) As Long '  Read analog input gain (1, 2, 4 or 8) for one or few input
Declare Function GPIOAnalogGainSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogInputGainValue As Long) As Long '  Set analog input gain (1, 2, 4 or 8) for one or few input
Declare Function GPIODigitalGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GPIOName As String, DigitalValue As Integer) As Long '  Read digital output or digital input 
Declare Function GPIODigitalSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GPIOName As String, ByVal Mask As Integer, ByVal DigitalOutputValue As Integer) As Long '  Set Digital Output for one or few output TTL
Declare Function GroupAccelerationSetpointGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, SetpointAcceleration As Double) As Long '  Return setpoint accelerations
Declare Function GroupAnalogTrackingModeEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal TypeName As String) As Long '  Enable Analog Tracking mode on selected group
Declare Function GroupAnalogTrackingModeDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Disable Analog Tracking mode on selected group
Declare Function GroupCorrectorOutputGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, CorrectorOutput As Double) As Long '  Return corrector outputs
Declare Function GroupCurrentFollowingErrorGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, CurrentFollowingError As Double) As Long '  Return current following errors
Declare Function GroupHomeSearch Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Start home search sequence
Declare Function GroupHomeSearchAndRelativeMove Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetDisplacement As Double) As Long '  Start home search sequence and execute a displacement
Declare Function GroupInitialize Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Start the initialization
Declare Function GroupInitializeNoEncoderReset Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Start the initialization with no encoder reset
Declare Function GroupInitializeWithEncoderCalibration Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Start the initialization with encoder calibration
Declare Function GroupInterlockDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Set group interlock disable
Declare Function GroupInterlockEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Set group interlock enable
Declare Function GroupJogParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, Velocity As Double, Acceleration As Double) As Long '  Modify Jog parameters on selected group and activate the continuous move
Declare Function GroupJogParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, Velocity As Double, Acceleration As Double) As Long '  Get Jog parameters on selected group
Declare Function GroupJogCurrentGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, Velocity As Double, Acceleration As Double) As Long '  Get Jog current on selected group
Declare Function GroupJogModeEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Enable Jog mode on selected group
Declare Function GroupJogModeDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Disable Jog mode on selected group
Declare Function GroupKill Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Kill the group
Declare Function GroupMotionDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Set Motion disable on selected group
Declare Function GroupMotionEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Set Motion enable on selected group
Declare Function GroupMotionStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, Status As Long) As Long '  Return group or positioner status
Declare Function GroupMoveAbort Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Abort a move
Declare Function GroupMoveAbortFast Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal AccelerationMultiplier As Long) As Long '  Abort quickly a move
Declare Function GroupMoveAbsolute Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetPosition As Double) As Long '  Do an absolute move
Declare Function GroupMoveRelative Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetDisplacement As Double) As Long '  Do a relative move
Declare Function GroupPositionCorrectedProfilerGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionX As Double, ByVal PositionY As Double, CorrectedProfilerPositionX As Double, CorrectedProfilerPositionY As Double) As Long '  Return corrected profiler positions
Declare Function GroupPositionCurrentGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, CurrentEncoderPosition As Double) As Long '  Return current positions
Declare Function GroupPositionPCORawEncoderGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionX As Double, ByVal PositionY As Double, PCORawPositionX As Double, PCORawPositionY As Double) As Long '  Return PCO raw encoder positions
Declare Function GroupPositionSetpointGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, SetPointPosition As Double) As Long '  Return setpoint positions
Declare Function GroupPositionTargetGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetPosition As Double) As Long '  Return target positions
Declare Function GroupReferencingActionExecute Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ReferencingAction As String, ByVal ReferencingSensor As String, ByVal ReferencingParameter As Double) As Long '  Execute an action in referencing mode
Declare Function GroupReferencingStart Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Enter referencing mode
Declare Function GroupReferencingStop Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Long '  Exit referencing mode
Declare Function GroupStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, Status As Long) As Long '  Return group status
Declare Function GroupStatusStringGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupStatusCode As Long, ByVal GroupStatusString As String) As Long '  Return the group status string corresponding to the group status code
Declare Function GroupVelocityCurrentGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, CurrentVelocity As Double) As Long '  Return current velocities
Declare Function KillAll Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Put all groups in 'Not initialized' state
Declare Function RestartApplication Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Long '  Restart the Controller
Declare Function PositionerAnalogTrackingPositionParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal GPIOName As String, Offset As Double, ScaleValue As Double, Velocity As Double, Acceleration As Double) As Long '  Read dynamic parameters for one axe of a group for a future analog tracking position
Declare Function PositionerAnalogTrackingPositionParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal GPIOName As String, ByVal Offset As Double, ByVal ScaleValue As Double, ByVal Velocity As Double, ByVal Acceleration As Double) As Long '  Update dynamic parameters for one axe of a group for a future analog tracking position
Declare Function PositionerAnalogTrackingVelocityParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal GPIOName As String, Offset As Double, ScaleValue As Double, DeadBandThreshold As Double, Order As Long, Velocity As Double, Acceleration As Double) As Long '  Read dynamic parameters for one axe of a group for a future analog tracking velocity
Declare Function PositionerAnalogTrackingVelocityParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal GPIOName As String, ByVal Offset As Double, ByVal ScaleValue As Double, ByVal DeadBandThreshold As Double, ByVal Order As Long, ByVal Velocity As Double, ByVal Acceleration As Double) As Long '  Update dynamic parameters for one axe of a group for a future analog tracking velocity
Declare Function PositionerBacklashGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, BacklashValue As Double, ByVal BacklaskStatus As String) As Long '  Read backlash value and status
Declare Function PositionerBacklashSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal BacklashValue As Double) As Long '  Set backlash value
Declare Function PositionerBacklashEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Long '  Enable the backlash
Declare Function PositionerBacklashDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Long '  Disable the backlash
Declare Function PositionerCompensatedPCOAbort Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Long '  Abort CIE08 compensated PCO mode
Declare Function PositionerCompensatedPCOCurrentStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, Status As Long) As Long '  Get current status of CIE08 compensated PCO mode
Declare Function PositionerCompensatedPCOEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Long '  Enable CIE08 compensated PCO mode execution
Declare Function PositionerCompensatedPCOFromFile Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal DataFileName As String) As Long '  Load file to CIE08 compensated PCO data buffer
